--- a/README
+++ b/README
@@ -1,1 +1,10 @@
-Hello, Everyone!
+Hello, Everyone! Welcome to my Git Repository. 
+
+Here, I have uploaded a program from my computer science class, CS1300 @ CU Boulder.
+The program displays a wire-frame space shuttle. To run the program, you must download the shuttle.dat file. 
+'Shuttle.dat' supplies all the vertices for the wire-frame, provided by my instructor, Prof. Michael Main. 
+
+My first and only computer science class was CS1300. It grounded my understanding of C++. 
+I am self-taught in all of my other programing languages.
+
+Thanks for stopping by!
